2011-04-05 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * veranstaltungenParser.py: Several modifications to improve parsing
         of Sem_EuI.txt files (..L -> Labor .., TSE without any group,
         Tutorium and Verbundveranstaltung also added).
         Two 'special cases' of Semesterkürzel with to hyphens ('-') will be
         recognized now.
         This leads to several changes in:
        * veranstaltungenParserTest.py: see above
        * veranstaltungenDispatchProcessor.py: -"-
        * veranstaltungenDispatchProcessorTest.py: -"-

2011-04-03 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * allGroups2iCalendar.py, commandGui.py, controller.py, 
          haw2iCalendar.py, hawCalendar.py, hawDispatchProcessor:
         Grouping is now flexlible. The 'key' now is exchangeable.

        * haw2iCalendar.py: New Options '--prof' and '--alternative'.
        * hawCalendar.py: changed from a mutable to a immutable design.

2011-04-02 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * allGroups2iCalendar.py: new, This script shows you how to
         use haw2iCalendar without a gui.

        * controller.py(setOutfile): new, used in allGroups2iCalendar.py

2011-03-31 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * Set haw2iCalendar under the terms of the GPLv3.

2011-03-31 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * Code sub-divided into modules (hawModel and
         hawModel.veranstaltungen)

2011-03-31 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * faecher.py: faecher renamed to infFaecher. etechFaecher: new.
         faecher now is a merge of both. Due to clashes in the abbreviations
         for courses in etech there is more work to do...

2011-03-30 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * commandGui.py(write): The sum of written iCalendar events will now
         be reported.
